# opengl-tutorial

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmakeRun.bat  cmakeRun.sh  installLinuxPackages.md  projectClean.sh  removeBuild.bat  runVcpkg.bat  runVcpkg.sh  vcpkg.json
.github/workflows/: windows.yml
app/: CMakeLists.txt  main.cpp
configured/: config.hpp.in
src/: CMakeLists.txt  CmakeLists.txt  window.cpp
src/include/: window.h
